# qr-backup

./: .gitmodules  CMakeLists.txt  main.cpp  readme.md
src/: image.h  main.cpp  qrcode.cpp  qrcode.h  qrcode_wrapper.cpp  qrcode_wrapper.h
test/: CMakeLists.txt  test_image.cpp  test_qrcode.cpp
